<resources>
    <string name="app_name">FrikiShop</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="seguir_comprando">Seguir comprando</string>
    <string name="carrito">Carrito</string>
    <string name="comprar">Comprar</string>
    <string name="ver_figuras_populares">Ver figuras populares</string>
    <string name="volver">Volver</string>
    <string name="ver_carrito">Ver carrito</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="rol">Rol</string>
    <string name="ver_usuarios">Ver usuarios</string>
    <string name="a_adir_usuario">Añadir Usuario</string>
</resources>